Make about page background size of full page for all screen sizes, fix responsiveness, capitalize first part of navbar, set text overflow to scroll

--- a/app/assets/stylesheets/base/global.scss
+++ b/app/assets/stylesheets/base/global.scss
@@ -11,9 +11,9 @@ html, body {
 section.about-page {
     display:flex;
     justify-content:center;
-    margin-top:5%;
     height:100%;
     width:100%;
+    display:flex;
 }
 
 div.about-page {
@@ -21,24 +21,37 @@ div.about-page {
     background-size: 100% 100%;
     min-height: 50%;
     min-width: 30%;
-    width:auto;
-    box-shadow: 5px 10px 25px;
-    padding:5px;
-    float:left;
-    margin: 0 5% 5% 5%;
+    float:none;
+    width:100%;
+    height:100%;
+    overflow:hidden;
+    position:relative;
+    filter: brightness(65%);
+    margin-bottom:0;
+    
  }
 
  div.about-text {
      display:inline-block;
      width: auto;
      max-width:40%;
-     height:90%;
+     height:80%;
      box-shadow: 5px 5px 15px;
      padding:10px;
      background-color: #6497b1;
      font-family:Helvetica, sans-serif;
      color: #011f4b;
-     overflow:hidden;
+     overflow:scroll;
+     float:none;
+     left:1%;
+     margin:5%;
+     margin-bottom:0%;
+     margin-left:2%;
+     position:absolute;
+     background-color:transparent;
+     font-weight:bolder;
+     color:white;
+     box-shadow:none;
  }
 
  p.about-paragraph {
@@ -50,34 +63,6 @@ div.about-page {
      width:30%;
  }
 
- @media screen and (max-width: 600px) {
-    section.about-page {
-        height:100%;
-        margin-top:10%;
-        display:flex;
-        flex:none;
-    }
-
-    div.about-page {
-        float:none;
-        width:100%;
-        overflow:hidden;
-        position:relative;
-        filter: brightness(65%);
-    }
-
-    div.about-text {
-        float:none;
-        width:auto;
-        left:5%;
-        margin:5%;
-        position:absolute;
-        background-color:transparent;
-        font-weight:bolder;
-        color:white;
-        box-shadow:none;
-    }
-}
 
 img.avatar {
      max-width: 90%;
